Fixed search expand collapse left

--- a/assets/sass/molecules/_banner-menu.scss
+++ b/assets/sass/molecules/_banner-menu.scss
@@ -168,7 +168,6 @@
 	.desktop__menu .menu-item:hover .children {
 		background-color: $header-bg-color;
 		display: block;
-		overflow: visible;
 		clip: inherit;
 		position: absolute;
 		top: 1.2em;
@@ -184,6 +183,7 @@
 			@extend %divider-stroke--thick;
 			background-color: rgba(255,255,255,0.2);
 			height: 0.1em;
+			width: 4em;
 			margin-top: 0;
 		}
 	}
