--- a/assets/sass/plugins/_search.scss
+++ b/assets/sass/plugins/_search.scss
@@ -121,6 +121,8 @@ $bg: rgba(0,0,0,0.3);
 			display: inline-block;
 			float: left;
 			margin-top: 0;
+			margin-right: 1em;
+			width: auto;
 
 			.form-group {
 				height: 2em;
@@ -132,7 +134,7 @@ $bg: rgba(0,0,0,0.3);
 				border: 0;
 				padding-right: 0;
 				padding-left: 0;
-				width: auto;
+				width: 3em;
 
 				&:before {
 					@extend %nav__button--icon-base;
@@ -143,10 +145,14 @@ $bg: rgba(0,0,0,0.3);
 		}
 
 		.name-search {
-			height: auto;
+			width: 0;
+			visibility: hidden;
 			margin-top: 0;
 			display: inline-block;
 			background: none;
+			height: 3em;
+			box-sizing: border-box;
+			@include transition(all 0.6s ease-in-out);
 
 			.form-control {
 				border: 1px solid rgba(255,255,255,0.5);
@@ -154,8 +160,17 @@ $bg: rgba(0,0,0,0.3);
 				padding: 0.3em;
 				color: white;
 				display: inline;
-				width: 100%;
 			}
 		}
+	}
+
+	.banner__menu .ipsSearch .type-submit {
+		width: auto;
+		float: right;
+	}
+
+	.banner__menu .name-search.js-show-search-field {
+		width: 13em;
+		visibility: visible;
 	}
 }
